[package]
name = "dht11-prometheus-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
clap = { version = "4.4.16", features = ["derive"] }
log = "0.4.20"
prometheus-client = "0.22.0"
tracing = "0.1.40"
