[package]
name = "dht11-prometheus-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
clap = { version = "4.4.16", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
log = "0.4.20"
parking_lot = "0.12.1"
prometheus-client = "0.22.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
